# promptbar

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  drizzle.config.ts  next.config.ts  package.json  playwright.config.ts  release-please-config.json  turbo.json  vitest.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-please.yml
corpus/: README.md  prompt-atlas-disposition.json
corpus/canon/: agent-architecture-decision.md  api-contract-design.md  database-change-plan.md  prompt-refinement.md  react-component-delivery.md  web-performance-diagnosis.md
crates/promptops-cli/: Cargo.toml
crates/promptops-cli/src/: main.rs
crates/promptops-cli/tests/: curated_corpus.rs  overlay.rs  search.rs
crates/promptops-core/: Cargo.toml
crates/promptops-core/src/: capture.rs  db.rs  embed.rs  error.rs  ingest.rs  lib.rs  models.rs  paths.rs  redact.rs
docs/: data-boundaries.md  development-guide.md  project-overview.md  release-policy.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/bootstrap/: route.ts
src/app/api/chat/: route.ts
src/app/api/codex/: route.ts
src/app/api/corpus/: route.ts
src/app/api/evals/: route.ts
src/app/api/export/: route.ts
src/app/api/import/: route.ts
src/app/api/prompts/[id]/: route.ts
src/app/api/refine/: route.test.ts  route.ts
src/app/api/search/: route.test.ts  route.ts
src/app/api/settings/: route.ts
src/components/ai-elements/: code-block.tsx
src/components/ui/: command.tsx
src/components/workbench/: code-editor.tsx  promptbar-app.tsx
src/lib/server/: ai.test.ts  ai.ts  codex.ts  crypto.ts  db.ts  env.ts  import-corpus.ts  paths.ts  promptops.ts  schema.ts
src/lib/shared/: schemas.test.ts  schemas.ts  search-url.test.ts  search-url.ts  types.ts
src/scripts/: import-corpus.ts
tests/e2e/: promptbar.spec.ts
