[workspace]
members = [
    "crates/promptops-core",
    "crates/promptops-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
assert_cmd = "2.2.2"
blake3 = "1.8.5"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
ignore = "0.4.26"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
rusqlite_migration = "2.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
