[package]
name = "promptops-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "promptops"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
promptops-core = { path = "../promptops-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
