[package]
name = "promptops-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
chrono.workspace = true
ignore.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
rusqlite_migration.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

